Add more styles

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<link rel="stylesheet" href="Multiselect.css" />
 	<style>
 		html {
-			font-size: 15px;
+			font-size: 16px;
 		}
 
 		body {
 			background-color: #f9f9f9;
+			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		}
 	</style>
 </head>
@@ -21,7 +22,7 @@
 		<input type="hidden" name="name">
 		<div class="selections-wrapper">
 			<div class="selections"></div>
-			<button class="toggler"><img src="arrow-down.svg" alt="" width="32" height="32" /></button>
+			<button class="toggler"><img src="arrow-down.svg" alt="" /></button>
 		</div>
 		<div class="selections-dropdown">
 			<div class="item" data-value="1">Item 1</div>
