--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		body {
 			background-color: #f9f9f9;
 			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			max-width: 600px;
+			text-align: center;
 		}
 	</style>
 </head>
