--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 			max-width: 600px;
 			text-align: center;
+			margin: 0 auto;
 		}
 	</style>
 </head>
